# agentflow-hermes

./: .gitignore  LICENSE  README.md  agentflow-roadmap.yaml  pyproject.toml
config/: boards.yaml
contracts/: generic.owner-input.v1.yaml  warroom.g421.exposure-resolution.v1.yaml
docs/: ack-remediation-control-plane.md  live-migration-design.md  m1-m2-design.md  m13-bounded-real-executor-canary.md  m14-roadmap-go-autopromoter.md  m19-channel-specific-agentflow-templates.md  m24-oracle-ack-auto-remediation-gap.md  m25-needs-input-continuation-engine-vertical-slice.md  m26-global-needs-input-rollout.md  m27-zero-ceremony-canary.md  maintenance-plugin-runner-design.md  mp4-bounded-remediation-loop-supervisor.md  plugin-architecture.md  policy-ref-runtime-hydration-design.md  upstream-fit-audit.md  upstream-maintainer-pitch.md  upstream-pr-59775-verification.md
scripts/: agentflow_auto_remediation_watchdog.py  agentflow_needs_input_watchdog.py  agentflowd.py  kanban_auto_remediation_adapter.py  m27_quarantine_legacy_incident_rows.py
tests/: test_ack.py  test_agentflowd.py  test_apply_board_operation.py  test_board_adapter.py  test_code_fix_continuation.py  test_continuation_cli.py  test_continuation_engine.py  test_continuation_store.py  test_control_plane_store_migration.py  test_cron_bridge.py  test_dryrun_side_effect_free.py  test_event_latency.py  test_g421_real_adapter_canary.py  test_g421_vertical_canary.py  test_global_needs_input_rollout.py  test_inotify_watch.py  test_input_contract.py  test_input_reply_bridge.py  test_interaction_inbox.py  test_live_cli.py  (+40 more)
(+72 files in other folders)
